Fix header spacing

--- a/src/presentational-components/shared/top-toolbar.scss
+++ b/src/presentational-components/shared/top-toolbar.scss
@@ -14,3 +14,6 @@
     min-width: 200px;
   }
 }
+.top-toolbar-description {
+  padding: var(--pf-global--spacer--sm);
+}
